fix contacts decor align

--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -42,6 +42,10 @@
     }
 }
 
+.contact__info.decor::before {
+    margin-left: 0;
+}
+
 .contact__title_decor {
     width: 300px;
     height: 20px;
